# mcclibhid

./: 99-mcclibhid.rules  Makefile  Makefile.am  bootstrap.sh  configure.in  mcclibhid_Prefix.pch  pmd.c  pmd.h  test-usb1208FS.c  usb-1208FS.c  usb-1608FS.c
debian/: changelog  control  copyright  rules
mcclibhid.xcodeproj/: project.pbxproj
pkgconfig/: libmcclibhid.pc.in
